--- a/RegistroEstudiantes/Views/Shared/_LoginPartial.cshtml
+++ b/RegistroEstudiantes/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 @using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<AplicationUser> SignInManager
+@inject UserManager<AplicationUser> UserManager
 
 @if (SignInManager.IsSignedIn(User))
 {
